--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,6 +19,9 @@
     background-color: var(--background);
     color: var(--foreground);
     font-family: Arial, Helvetica, sans-serif;
+    background: linear-gradient(270deg, rgba(255,110,196,0.5), rgba(120,115,245,0.5), rgba(74,222,128,0.5), rgba(250,204,21,0.5), rgba(248,113,113,0.5));
+    background-size: 1000% 1000%;
+    animation: colorfulGlow 30s ease infinite;
   }
 }
 
@@ -68,6 +71,18 @@ html {
   to {
     opacity: 1;
     transform: translateY(0);
+  }
+}
+
+@keyframes colorfulGlow {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
   }
 }
 
